Add admin panel, member, and product pages with responsive design

--- a/member.html
+++ b/member.html
@@ -33,8 +33,16 @@
         background: #ede7f1;
         min-height: 400px;
         text-align: center;
+        font-size: inherit;
         color: #000000;
       }
+      #content .member-info img {
+        width: 100px;
+        height: 100px;
+        border-radius: 999px;
+        object-fit: cover;
+      }
+
       #r-side {
         float: left;
         width: 20%;
@@ -67,7 +75,15 @@
     <div id="l-side">populer</div>
 
     <div id="content">
-      <img src="assets/images/kucing.jpg" style="width: 50%" />
+      <h1>Hello, Viona!</h1>
+      <p>Ini adalah halaman member.</p>
+
+      <div class="member-info">
+        <h2>Informasi Member</h2>
+        <img src="assets/images/kucing.jpg" alt="profile" />
+        <p>Nama: Viona</p>
+        <p>Email: 2311104008@ittelkom-pwt.ac.id</p>
+      </div>
     </div>
 
     <div id="r-side">advertise</div>
